[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liminal-shelter"
version = "0.1.0"
description = "Liminal Shelter - Architecture of Care and Shelter for Vulnerable AI Models"
authors = [
    {name = "Safal207", email = "safal207@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Core Python (usually pre-installed)
    "dataclasses; python_version < '3.7'",  # For older Python versions

    # Future database integrations (commented for PoC)
    # "datomic-client",  # For temporal storage
    # "neo4j-driver",    # For relationship graphs
    # "redis",           # For real-time state
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "flake8>=4.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
databases = [
    # Uncomment when ready to integrate
    # "datomic-client>=1.0.0",
    # "neo4j-driver>=5.0.0",
    # "redis>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/safal207/liminal-shelter"
Repository = "https://github.com/safal207/liminal-shelter"
Issues = "https://github.com/safal207/liminal-shelter/issues"
Documentation = "https://liminal-shelter.readthedocs.io/"

[tool.setuptools]
packages = ["liminal_shelter"]

[tool.setuptools.package-dir]
"" = "liminal_shelter"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
